--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -1,20 +1,18 @@
-
 <!-- No arquivo 'auth-login.component.html' -->
-<div class="w-100 h-100 d-flex">
-  <div class="w-25">
-    <div class="page-title">
+<div class="w-100 h-100 d-flex painel">
+  <div class="w-25 my-auto text-center tela">
+    <img src="/assets/logo.png" class="img-fluid w-25">
+    <div class="page-title text-center">
       <h2>Fazer login</h2>
       <p>Entre na sua conta do fórum</p>
     </div>
-
     <!--  <form [formGroup]="loginForm" class="login-form">-->
-
-    <div class="form-group">
+    <div class="form-group col-sm-6 d-flex w-100 flex-column align-items-center">
       <label for="nickName">Usuário</label>
-      <input type="text" formControlName="nickName" class="form-control" id="nickName">
+      <input type="text" formControlName="nickName" class="form-control w-50" id="nickName">
     </div>
 
-    <div class="form-group">
+    <div class="form-group col-sm-6">
       <label for="password">Senha</label>
       <input type="password" formControlName="password" class="form-control" id="password">
     </div>
@@ -22,7 +20,8 @@
     <button type="submit" class="btn btn-primary">Entrar</button>
 
   </div>
-  <div class="w-75 h-100 bg-dark">
+  <div class="w-75 h-100 my-auto text-center login">
+    LOGIN
   </div>
 </div>
 
