Tela com módulos criada

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse bg-green">
   <img src="/assets/logo.png"  style="width: 58px; height: 58px;">
-  <h1 class="navbar-brand mb-0 text-white" style="margin-right: 1590px;">
+  <h1 class="navbar-brand mb-0 text-white ml-2" style="margin-right: 1590px;">
     PMAM
     <br>
     Polícia Militar do Amazonas
