--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,12 @@
-<app-header></app-header>
+<div class="row m-0 p-0">
 
-<div class="row p-5">
+  <div class="card-info m-5">
+    <div class="card-body">
+      <h5 class="card-title">Informativo</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    </div>
+  </div>
+
   <div class="col-sm-4">
     <div class="card">
       <div class="card-body">
