--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,8 +14,7 @@
   </div>
   <div class="col-2 justify-content-center my-2 py-2">
     <button class="btn btn-primary" (click)="voltar()">
-      <span class="glyphicon glyphicon-log-out"></span> Log out
-      Logout
+      <i class="bi bi-box-arrow-right"></i> Log out
     </button>
   </div>
 </div>
