--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row m-0 p-0">
+<div class="row m-0 p-0" id="ccaf">
 
   <div class="card-info m-5">
     <div class="card-body">
@@ -30,7 +30,7 @@
       <div class="card-body">
         <h5 class="card-title">CCAF</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-success">Acessar</a>
+        <a id="btn-generate-ccaf" class="btn-generate-ccaf btn btn-success">Acessar</a>
       </div>
     </div>
   </div>
