Botão para baixar pdf da visualização do ccaf feito

--- a/src/app/tela-ccaf/tela-ccaf.component.html
+++ b/src/app/tela-ccaf/tela-ccaf.component.html
@@ -1,39 +1,42 @@
-<div class="container" id="ccaf">
+<div>
+
+  <button class="btn btn-sucess" (click)="printPDF()">BAIXAR</button>
+<div class="container" id="ccaf" #ccaf>
   <div class="d-flex justify-content-center align-items-start">
     <img src="assets/amazon_logo.png" class="mt-5">
   </div>
 
-    <div class="row mt-3">
-      <div class="col-12">
-        <h1 class="text-center font-weight-bold fs-4">
-          POLÍCIA MILITAR DO AMAZONAS
-        </h1>
-      </div>
-      <div class="col-12">
-        <p class="text-center fs-4">CERTIFICADO DE CARGA DE ARMA DE FOGO</p>
-      </div>
+  <div class="row mt-3">
+    <div class="col-12">
+      <h1 class="text-center font-weight-bold fs-4">
+        POLÍCIA MILITAR DO AMAZONAS
+      </h1>
     </div>
-
-    <div class="col-6 col-sm-4 mt-5">NOME</div>
-    <input>
-
-    <div class="row mt-5 justify-content-between">
-      <div class="col-6 col-sm-4">POSTO/GRAD
-        <input>
-      </div>
-      <div class="col-6 col-sm-6">MATRÍCULA
-        <input>
-      </div>
-      <!-- Force next columns to break to new line at md breakpoint and up -->
-      <div class="w-100 d-none d-md-block"></div>
-
-      <div class="col-6 col-sm-4 mt-5">CI
-        <input>
-      </div>
-      <div class="col-6 col-sm-6 mt-5">AUT/BIR
-        <input>
-      </div>
+    <div class="col-12">
+      <p class="text-center fs-4">CERTIFICADO DE CARGA DE ARMA DE FOGO</p>
     </div>
+  </div>
+
+  <div class="col-6 col-sm-4 mt-5">NOME</div>
+  <input>
+
+  <div class="row mt-5 justify-content-between">
+    <div class="col-6 col-sm-4">POSTO/GRAD
+      <input>
+    </div>
+    <div class="col-6 col-sm-6">MATRÍCULA
+      <input>
+    </div>
+    <!-- Force next columns to break to new line at md breakpoint and up -->
+    <div class="w-100 d-none d-md-block"></div>
+
+    <div class="col-6 col-sm-4 mt-5">CI
+      <input>
+    </div>
+    <div class="col-6 col-sm-6 mt-5">AUT/BIR
+      <input>
+    </div>
+  </div>
 
   <div class="row mt-5">
     <div class="col-12">
@@ -42,4 +45,5 @@
       </h1>
     </div>
   </div>
+</div>
 </div>
