Tela de identidade criada

--- a/src/app/tela-ccaf/tela-ccaf.component.html
+++ b/src/app/tela-ccaf/tela-ccaf.component.html
@@ -1,6 +1,5 @@
 <div>
-
-  <button class="btn btn-sucess" (click)="printPDF()">BAIXAR</button>
+  <button class="btn btn-sucess" (click)="gerarPDF()">BAIXAR</button>
 <div class="container" id="ccaf" #ccaf>
   <div class="d-flex justify-content-center align-items-start">
     <img src="assets/amazon_logo.png" class="mt-5">
