--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-
-<app-tela-ccaf></app-tela-ccaf>
+<!--<router-outlet></router-outlet>-->
+<!--<app-tela-ccaf></app-tela-ccaf>-->
+<app-tela-identidade></app-tela-identidade>
