--- a/src/app/tela-identidade/tela-identidade.component.html
+++ b/src/app/tela-identidade/tela-identidade.component.html
@@ -1,36 +1,66 @@
 <div class="d-flex flex-column h-100 p-5 align-items-center" >
-  <div class="h-50 w-50 d-flex">
+  <div class="identidade h-100 w-50 d-flex">
     <div class="layout-principal-identidade col-11">
       <div class="container-logo d-flex justify-content-between m-4">
-        <img src="assets/amazon_logo.png" style="width: 100%;height: 120%">
+        <img class="logo-topo" src="assets/amazon_logo.png">
         <div class="text-center m-0">
           <p class="title-identidade-republica m-0 fw-bolder">REPLÚBLICA FEDERATIVA DO BRASIL</p>
           <p class="title-identidade-estado m-0 fw-bolder">ESTADO DO AMAZONAS</p>
           <h1 class="title-identidade-policia m-0 fw-bolder">POLICIA MILITAR</h1>
           <h3 class="title-identidade-carteira m-0 fw-bolder">CARTEIRA DE IDENTIDADE</h3>
         </div>
-        <img src="assets/militar_police_logo.png" style="width: 120px;height: 90px">
+        <img class="logo-topo" src="assets/militar_police_logo.png">
       </div>
 
-      <div class="container-fluid h-50" style="position: relative;">
-        <div class="img-logo h-100 justify-content-center" style=" position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-image: url('assets/militar_police_logo.png');
-          background-repeat: no-repeat; opacity: 0.2; background-size: 30%; background-position: center;">
+
+      <div class="container-fluid h-50">
+        <div class="justify-content-center" id="img-logo-background" style="background-image: url('assets/militar_police_logo.png')">
         </div>
 
-        <div class="d-flex justify-content-between">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Imagem de capa do card">
-            <div class="card-body">
-            </div>
+        <div class="d-flex justify-content-start pt-2">
+          <div class="card" id="card-person">
+            <img class="col align-items-center d-flex" src="assets/img.png" alt="Imagem de capa do card">
           </div>
-          <div>
-            <p class="border border-dark rounded">21dsadsdsad</p>
-            <p class="border border-dark rounded">21dsadsdsad</p>
-            <p class="border border-dark rounded">21dsadsdsad</p>
-            <p class="border border-dark rounded">21dsadsdsad</p>
-            <p class="border border-dark rounded">21dsadsdsad</p>
+
+          <div class="container-fluid mx-3 m-1">
+            <div class="row">
+              <div class="campo-dados-nome col-12 border border-3 border-dark rounded-4">
+                NOME:
+                <p class="campo-resultado-dados">MATHEUS DA SILVA ASSUNÇÃO</p>
+              </div>
+
+              <div class="campo-dados-validade col-6 col-sm-4 border border-3 border-dark rounded-4">
+                VALIDADE:
+                <p class="campo-resultado-dados">INDETERMINADA</p>
+              </div>
+
+              <div class="campo-dados-sit-funcional col-6 col-sm-6 border border-3 border-dark rounded-4">
+                SITUAÇÃO FUNCIONAL:
+                <p class="campo-resultado-dados">ATIVO</p>
+              </div>
+
+              <div class="campo-dados-ci col-6 col-sm-4 border border-3 border-dark rounded-4">
+                C.I MILITAR:
+                <p class="campo-resultado-dados">11111</p>
+              </div>
+
+              <div class="campo-dados-via col-6 col-sm-6 border border-3 border-dark rounded-4">
+                VIA:
+                <p class="campo-resultado-dados">1°</p>
+              </div>
+
+              <div class="campo-dados-data-inclusao border border-3 border-dark rounded-4">
+                DATA DE INCLUSÃO:
+                <p class="campo-resultado-dados">14/06/2022</p>
+              </div>
+
+              <div class="campo-dados-nome col-12 border border-3 border-dark rounded-4">
+                POSTO / GRADUAÇÃO:
+                <p class="campo-resultado-dados">MAJOR</p>
+              </div>
           </div>
-        </div>
+          </div>
+      </div>
 
       </div>
     </div>
